VF-63 # Fix bug! The page manager expand and collapse arrow respond functionality

--- a/src/components/Shared/Collaborator/Slides/Collaborator.module.scss
+++ b/src/components/Shared/Collaborator/Slides/Collaborator.module.scss
@@ -4,7 +4,7 @@
   background-color: $secondary;
   border-radius: 20px;
   text-align: center;
-
+  margin: 10px 15px;
   h4 {
     font-weight: $font-bold;
     padding: 20px;
